ontapdoc-2906 review feedback

--- a/_include/nvme/nvme-configure-nvme-fc.adoc
+++ b/_include/nvme/nvme-configure-nvme-fc.adoc
@@ -1,4 +1,4 @@
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. 
 
 [role="tabbed-block"]
 ====
