--- a/nvme_rockylinux_84.adoc
+++ b/nvme_rockylinux_84.adoc
@@ -46,7 +46,7 @@ include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 == Step 5: Validate NVMe-oF
 include::_include/nvme/nvme-validate-nvme-of.adoc[] 
 
-== Known issues
+== Step 6: Review the known issues 
 
 No known issues exist for the NVMe-oF host configuration on Rocky Linux 8.4 with ONTAP release.
 
