--- a/nvme_rockylinux_94.adoc
+++ b/nvme_rockylinux_94.adoc
@@ -50,8 +50,8 @@ include::_include/nvme/nvme-validate-nvme-of.adoc[]
 == Step 6: Optionally, enable SAN booting
 include::_include/nvme/nvme-enable-san-boot.adoc[]
 
-== Known issues
+== Step 7: Review the known issues
 
-There are no known issues for the NVMe-oF host configuration for Rocky Linux 9.4 with ONTAP release.
+No known issues exist for the NVMe-oF host configuration for Rocky Linux 9.4 with ONTAP release.
 
 
