--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -57,7 +57,7 @@ include::_include/nvme/nvme-enable-san-boot.adoc[]
 == Step 7: Set up secure in-band authentication
 include::_include/nvme/nvme-secure-in-band-authentication.adoc[]
 
-== Known issues
+== Step 8: Review the known issues
 
 No known issues exist for the NVMe-oF host configuration on Rocky Linux 9.5 with ONTAP release.
 
