ontapdoc-2609 minor updates

--- a/_include/nvme/nvme-introduction.adoc
+++ b/_include/nvme/nvme-introduction.adoc
@@ -1,1 +1,1 @@
-The Rocky Linux 9.5 host configuration supports the NVMe over Fabrics (NVMe-oF) protocol with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments. ANA is implemented using the in-kernel NVMe multipath feature.
+The Rocky Linux host configuration supports the NVMe over Fabrics (NVMe-oF) protocol with Asymmetric Namespace Access (ANA). In NVMe-oF environments, ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments. ANA is implemented using the in-kernel NVMe multipath feature.
