--- a/hu-rl-92.adoc
+++ b/hu-rl-92.adoc
@@ -23,17 +23,13 @@ You can use multipathing with Rocky Linux 9.2 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
-include::_include/hu/use-linux-host-utilities.adoc[]
-
 include::_include/hu/enable-san-boot-linux.adoc[]
 
 include::_include/hu/exclude-device.adoc[]
 
 include::_include/hu/rhel-customize-parameters.adoc[]
 
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
+== Step 6: Review the known issues
 
 The RHEL 9.2 with ONTAP release has the following known issues:
 
@@ -44,3 +40,8 @@ The RHEL 9.2 with ONTAP release has the following known issues:
 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1537359[1537359^] |A Red Hat Linux 9.2 SAN booted host with Emulex HBA encounters stalled tasks leading to kernel disruption |During a storage failover giveback operation, a Red Hat Linux 9.2 SAN booted host with an Emulex host bus adapeter (HBA) encounters stalled tasks leading to kernel disruption. The kernel disruption causes the operating system to reboot and if `kdump` is configured, it generates the `vmcore` file under the `/var/crash/` directory. The issue is being triaged with the `lpfc` driver but it cannot be reproduced consistently.
 |===
 
+== What's next?
+ 
+include::_include/hu/use-linux-host-utilities.adoc[]
+ 
+include::_include/hu/asm-mirroring.adoc[]
