--- a/hu-rl-91.adoc
+++ b/hu-rl-91.adoc
@@ -15,6 +15,8 @@ summary: Install the Linux Host Utilities on a Rocky Linux 9.1 host to manage FC
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.1 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
+include::_include/hu/rhel-configure-kvm-note.adoc[]
+
 include::_include/hu/install-linux-host-utilities.adoc[]
 
 == Step 2: Confirm the multipath configuration for your host
