Edits post IE review

--- a/_include/hu/enable-san-boot-linux.adoc
+++ b/_include/hu/enable-san-boot-linux.adoc
@@ -7,13 +7,12 @@ Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matri
 
 .Steps
 
-. Map the SAN boot LUN to the host.
+. Create a SAN boot LUN and map it to the host.
 +
 See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
 . Verify that multiple paths are available.
 +
-[NOTE] 
-Multiple paths become available after the host OS is up and running on the paths.
+NOTE: Multiple paths become available after the host OS is up and running on the paths.
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
