--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -23,7 +23,7 @@ systemctl start multipathd
 
 . Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
 +
-The following table shows the Linux OS native compiled multipath parameter settings for ONTAP LUNs.
+The following table shows the native Linux OS compiled multipath parameter settings for ONTAP LUNs.
 +
 .Show parameter settings
 [%collapsible]
