--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -31,7 +31,7 @@ include::_include/hu/customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the SUSE Linux Enterprise Server 15 SP6 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
