Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/_include/nvme/nvme-configure-nvme-fc.adoc
+++ b/_include/nvme/nvme-configure-nvme-fc.adoc
@@ -131,6 +131,6 @@ QLE2742 FW:v9.14.00 DVR:v10.02.09.200-k
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
 +
-The expected ouptut is 1.
+The expected output is 1.
 --
 ====
