--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -2,7 +2,14 @@ To ensure that multipathing is configured correctly for your host, verify that t
 
 .Steps 
 
-. Verify that the `/etc/multipath.conf` file exists. If the file doesn't exist, create an empty, zero-byte file:
+. Verify that the `/etc/multipath.conf` file exists:
++
+[source,cli]
+----
+ls /etc/multipath.conf
+----
++
+If the file doesn't exist, create an empty, zero-byte file:
 +
 [source,cli]
 ----
@@ -21,7 +28,7 @@ systemctl enable multipathd
 systemctl start multipathd
 ----
 
-. Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
+. Each time you boot the host, the empty `/etc/multipath.conf` zero-byte file automatically loads the NetApp recommended host multipath parameters as the default settings. You shouldn't need to make changes to the `/etc/multipath.conf` file for your host because the host operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly.
 +
 The following table shows the native Linux OS compiled multipath parameter settings for ONTAP LUNs.
 +
