--- a/_include/hu/enable-san-boot-linux.adoc
+++ b/_include/hu/enable-san-boot-linux.adoc
@@ -10,12 +10,19 @@ Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matri
 . Create a SAN boot LUN and map it to the host.
 +
 See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
-. Verify that multiple paths are available.
-+
-NOTE: Multiple paths become available after the host OS is up and running on the paths.
-
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 
 . Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+. Multiple paths become available after the host OS is up and running on the paths. 
++
+Verify that multiple paths are available:
++
+[source,cli]
+----
+multipath -ll
+----
+
+
+
