--- a/nvme_rockylinux_95.adoc
+++ b/nvme_rockylinux_95.adoc
@@ -14,8 +14,9 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can configure Rocky Linux 9.5 with NVMe protocols to manage ONTAP LUNs.
-include::_include/nvme/nvme-introduction.adoc[] 
+Rocky Linux 9.5 hosts support the NVMe/FC and NVMe/TCP protocols with Asymmetric Namespace Access (ANA). ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments and is implemented using the in-kernel NVMe multipath feature.
+
+For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 .About this task 
 You can use the following support and features with the NVMe-oF host configuration for Rocky Linux 9.5. You should also review the known limitations before starting the configuration process.
@@ -23,8 +24,6 @@ You can use the following support and features with the NVMe-oF host configurati
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
-+
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
 ** Beginning with ONTAP 9.12.1, you can use secure in-band authentication for NVMe-oF with Rocky Linux 9.5.
 ** Rocky Linux 9.5 enables in-kernel NVMe multipath for NVMe namespaces by default, removing the need for explicit settings.
@@ -35,28 +34,25 @@ For additional details on supported configurations, see the link:https://mysuppo
 == Step 1: Validate software versions
 include::_include/nvme/nvme-validate-software-versions.adoc[] 
 
-== Step 2: Configure NVMe/FC
-include::_include/nvme/nvme-configure-nvme-fc.adoc[]
-
-== Step 3: Optionally, enable 1MB I/O 
-include::_include/nvme/nvme-enable-1mb-io.adoc[]
-
-== Step 4: Configure NVMe/TCP
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+== Step 2: Verify your NVMe configuration
+include::_include/nvme/nvme-configure.adoc[]
 
 [NOTE]
 Beginning with Rocky Linux 9.5, the default setting for the NVMe/TCP `ctrl_loss_tmo` timeout is turned off. This means there is no limit on the number of retries (indefinite retry). Consequently, you don't need to manually configure a specific `ctrl_loss_tmo` timeout duration when using the `nvme connect` or `nvme connect-all` commands (option -l ). With this default behavior, the NVMe/TCP controllers don't experience timeouts in the event of a path failure and remain connected indefinitely.
 
-== Step 5: Validate NVMe-oF
+== Step 3: Optionally, enable 1MB I/O 
+include::_include/nvme/nvme-enable-1mb-io.adoc[]
+
+== Step 4: Validate NVMe-oF
 include::_include/nvme/nvme-validate-nvme-of.adoc[] 
 
-== Step 6: Optionally, enable SAN booting
+== Step 5: Optionally, enable SAN booting
 include::_include/nvme/nvme-enable-san-boot.adoc[]
 
-== Step 7: Set up secure in-band authentication
+== Step 6: Set up secure in-band authentication
 include::_include/nvme/nvme-secure-in-band-authentication.adoc[]
 
-== Step 8: Review the known issues
+== Step 7: Review the known issues
 
 No known issues exist for the NVMe-oF host configuration on Rocky Linux 9.5 with ONTAP release.
 
