--- a/_include/hu/exclude-device.adoc
+++ b/_include/hu/exclude-device.adoc
@@ -1,25 +1,22 @@
-== Step 4: Optionally, exclude a device from multipath
+== Step 4: Optionally, exclude a device from multipathing
 
-If required, you can exclude a device from multipath by adding the WWID for the unwanted device to the "blacklist" for the `multipath.conf` file using the following device stanza:
+If required, you can exclude a device from multipathing by adding the WWID for the unwanted device to the "blacklist" stanza for the `multipath.conf` file.
 
-----
-blacklist {
-        wwid <DevId>
-        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
-        devnode "^hd[a-z]"
-        devnode "^cciss.*"
-}
-----
-
-The following example determines a WWID and adds it to a "blacklist" stanza.
+.Steps
 
 . Determine the WWID:
 +
-`# /lib/udev/scsi_id -gud /dev/sda`
-+
-`360030057024d0730239134810c0cb833`
+[source,cli]
+----
+# /lib/udev/scsi_id -gud /dev/sda
+----
 +
 "sda" is the local SCSI disk that you want to add it to the blacklist.
++
+Example output:
++
+`360030057024d0730239134810c0cb833`
+
 
 . Add the WWID to the "blacklist" stanza:
 +
