--- a/hu-rl-90.adoc
+++ b/hu-rl-90.adoc
@@ -33,7 +33,7 @@ include::_include/hu/rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the FC host configuration for Rocky Linux 9.0 with ONTAP release.
+There are no known issues.
 
 == What's next?
  
