Update the title

--- a/hu-windows-2025.adoc
+++ b/hu-windows-2025.adoc
@@ -4,7 +4,7 @@ permalink: hu-windows-2025.html
 keywords: windows, enterprise
 summary: You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage.
 ---
-= Configure Windows Server 2025 with FCP and iSCSI for ONTAP storage
+= Configure Windows Server 2025 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
