--- a/hu_rhel_94.adoc
+++ b/hu_rhel_94.adoc
@@ -4,7 +4,7 @@ permalink: hu_rhel_94.html
 keywords: host utilities, red hat, rhel, linux, 9.4, netapp, ontap, rhel 
 summary: Install the Linux Host Utilities on a RHEL 9.4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 9.4 with FCP and iSCSI for ONTAP storage
+= Configure RHEL 9.4 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
