--- a/hu_rhel_92.adoc
+++ b/hu_rhel_92.adoc
@@ -4,7 +4,7 @@ permalink: hu_rhel_92.html
 keywords: host utilities, red hat, rhel, linux, 9.2, netapp, ontap, rhel 
 summary: Install the Linux Host Utilities on a RHEL 9.2 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 9.2 with FCP and iSCSI for ONTAP storage
+= Configure RHEL 9.2 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
