--- a/hu_rhel_95.adoc
+++ b/hu_rhel_95.adoc
@@ -4,7 +4,7 @@ permalink: hu_rhel_95.html
 keywords: host utilities, red hat, rhel, linux, 9.5, netapp, ontap, rhel 
 summary: Install the Linux Host Utilities on a RHEL 9.5 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 9.5 with FCP and iSCSI for ONTAP storage
+= Configure RHEL 9.5 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
