--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -4,7 +4,7 @@ permalink: hu_sles_12SP3.html
 keywords: host utilities, suse linux enterprise server 12 SP3, suse, linux, 12 SP3, netapp, ontap
 summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 12 SP3 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure SUSE Linux Enterprise Server 12 SP3 with FCP and iSCSI for ONTAP storage
+= Configure SUSE Linux Enterprise Server 12 SP3 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
