--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -4,7 +4,7 @@ permalink: hu_sles_15SP2.html
 keywords: host utilities, suse linux enterprise server 15 sp2, suse, linux, 15 sp2, netapp, ontap
 summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 SP2 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure SUSE Linux Enterprise Server 15 SP2 with FCP and iSCSI for ONTAP storage
+= Configure SUSE Linux Enterprise Server 15 SP2 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
