--- a/_include/hu/exclude-device.adoc
+++ b/_include/hu/exclude-device.adoc
@@ -13,10 +13,7 @@ If required, you can exclude a device from multipathing by adding the WWID for t
 +
 "sda" is the local SCSI disk that you want to add it to the blacklist.
 +
-Example output:
-+
-`360030057024d0730239134810c0cb833`
-
+An example WWID is `360030057024d0730239134810c0cb833`.
 
 . Add the WWID to the "blacklist" stanza:
 +
