--- a/hu-rl-91.adoc
+++ b/hu-rl-91.adoc
@@ -33,12 +33,12 @@ include::_include/hu/rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The RHEL 9.1 with ONTAP release has the following known issues:
+The Rocky Linux 9.1 release for FCP and iSCSI with ONTAP storage has the following known issues:
 
 [options="header", cols="20,40,40"]
 |===
 |NetApp Bug ID	|Title	|Description
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex HBA adapter discovery	|In RHEL 9.1, the NetApp Linux SAN Host Utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support HBA discovery cannot be found. 
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1508554[1508554^]  	|NetApp Linux Host Utilities CLI requires additional library package dependencies to support Emulex HBA adapter discovery	|In Rocky Linux 9.1, the NetApp Linux SAN Host Utilities CLI `sanlun fcp show adapter -v` fails because the library package dependencies to support HBA discovery cannot be found. 
 
 |===
 
