--- a/hu-rl-92.adoc
+++ b/hu-rl-92.adoc
@@ -33,7 +33,7 @@ include::_include/hu/rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The RHEL 9.2 with ONTAP release has the following known issues:
+The Rocky Linux 9.2 release for FCP and iSCSI with ONTAP storage has the following known issues:
 
 [options="header", cols="20,40,40"]
 |===
