--- a/hu_solaris_80_rn.adoc
+++ b/hu_solaris_80_rn.adoc
@@ -5,7 +5,7 @@ keywords: Host Utilities, solaris, 8.0 netapp, ontap
 summary: Release Notes for Solaris Host Utilities 8.0
 ---
 
-= Solaris Host Utilities 8.0 Release Notes
+= Solaris Host Utilities 8.0 release notes
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -30,7 +30,7 @@ You should be aware of the following known problems and limitations that might i
 [cols=3,options="header"]
 |===
 |Bug ID	|Title	|Description
-|NA
+|N/A
 |Solaris Host Utilities 8.0 release limited for Solaris 11.4 |Solaris Host Utilities 8.0 release is limited to Solaris 11.4 with both Sparc and x86 platforms. Solaris 11.3 and earlier versions still need to use the Solaris Host Utilities 6.2
 |===
 
