ontapdoc-2879 command reference language improvements

--- a/hu_solaris_80_cmd.adoc
+++ b/hu_solaris_80_cmd.adoc
@@ -88,7 +88,7 @@ ONTAP Path: sanboot_unix:/vol/test1/lun1
 
 == List all LUNs mapped to host from a given SVM/ List all attributes of a given LUN mapped to host
 
-You can retrieve a list of all LUNs mapped to a host from a certain SVM.
+You can retrieve a list of all LUNs mapped to a host from a specific SVM.
 
 [source,cli]
 ----
