--- a/hu_solaris_80.adoc
+++ b/hu_solaris_80.adoc
@@ -47,7 +47,7 @@ At the time this documentation was prepared, the compressed files were called:
 +
 `# tar -xvf netapp_solaris_host_utilities_8_0_sparc.tar`
 
-. Add the packages that you extracted from tar file to your host by using the pkgadd command. The packages are added to the /opt/NTAP/SANToolkit/bin directory.
+. Add the packages that you extracted from tar file to your host by using the `pkgadd` command. The packages are added to the `/opt/NTAP/SANToolkit/bin` directory.
 +
 Confirm that the toolkit was successfully installed by using the `pkgchk` command to the installed path. Below is command reference for example.  
 +
@@ -100,23 +100,27 @@ drwxr-xr-x   3 root     sys            4 Mar  7 13:11 ..
 `sanlun version`
 
 . Check the command reference:
-
++
 /opt/NTAP/SANToolkit/bin/host_config ←setup> ←protocol fcp|iscsi|mixed> ←multipath mpxio|dmp| non> [-noalua] [-mcc 60|90|120]
-
++
 For example, if setup is with FCP with multipath as MPxIO, the command will be. With this host_config command, to check configuration changes for SM-AS, please refer link:https://kb.netapp.com/on-prem/ontap/DP/SnapMirror/SnapMirror-KBs/Solaris_Host_support_recommended_settings_in_SnapMirror_active_sync_formerly_SM_BC_configuration[NetApp KB Solaris host support in SM-AS].
-
++
 #/opt/NTAP/SANToolkit/bin/host_config --setup --protocol fcp --multipath mpxio
 
-If setup is with FCP with multipath as DMP, the command will be.
-
+.. If setup is with FCP with multipath as DMP, the command will be.
++
 #/opt/NTAP/SANToolkit/bin/host_config --setup --protocol fcp --multipath dmp
 
-If setup is with FCP on MCC with multipath as MPxIO , where default APD value recommended to be increase to 120 Sec from OS default, the command will be. Please refer link:https://kb.netapp.com/on-prem/ontap/mc/MC-KBs/Solaris_host_support_considerations_in_a_MetroCluster_configuration[NetApp KB Solaris host support in MCC].
-
+.. If setup is with FCP on MCC with multipath as MPxIO , where default APD value recommended to be increase to 120 Sec from OS default, the command will be. Please refer link:https://kb.netapp.com/on-prem/ontap/mc/MC-KBs/Solaris_host_support_considerations_in_a_MetroCluster_configuration[NetApp KB Solaris host support in MCC].
++
 #/opt/NTAP/SANToolkit/bin/host_config --setup --protocol fcp --multipath mpxio --mcc 120
 
 . Post host config followed by a reboot, below LUN parameters getting updated which includes disksort and cache-nonvolatile values as well.
-
++
+.Show example
+[%collapsible]
+====
+----
 #prtconf -v |grep NETAPP
    value='NETAPP  LUN' +
    physical-block-size:4096,
@@ -128,10 +132,11 @@ If setup is with FCP on MCC with multipath as MPxIO , where default APD value re
    throttle-min:8,
    disksort:false,
    cache-nonvolatile:true'
-
+----
+====
 . Verify the installation:
 
-#sanlun version
+`#sanlun version`
 
 == Enable SAN toolkit 
 
